--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -82,7 +82,7 @@ fernandoepeso.info
   </div>
   <!--Header-->
   <header id="header">
-    <div class="menu_open">MENU</div>
+    <div class="menu_open">yesssssssss</div>
     <div >
     	<div class="menu">
             {% for link in linklists.main-menu.links %}
