--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -202,7 +202,7 @@ fernandoepeso.info
   {%- endif -%}
   {{ content_for_layout }}
   <footer>
-    <div>© VAATRA BERLIN 2022</div>
+    <div>© VAATRA BERLINnnnnnn 2022</div>
     <div>
         <a>INSTAGRAM</a><br>
         <p>NEWSLETTER</p>
