--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -81,7 +81,7 @@ fernandoepeso.info
     </script>
   </div>
   <!--Header-->
-  <header id="header">
+  <!-- <header id="header">
     	<div class="menu">
             {% for link in linklists.main-menu.links %}
             <li {% if link.active %}class="active"{% endif %}><a class="{{ link.title }}" href="{{ link.url }}">{{ link.title }}</a></li>
@@ -105,7 +105,7 @@ fernandoepeso.info
           </li>
   	    </div>
       </div>
-  </header>
+  </header> -->
 
   {% if template == 'index'%}
   {%- else -%}
