--- a/assets/style.css
+++ b/assets/style.css
@@ -353,8 +353,7 @@ img{
   display: none;
 }
 .thumbnail img{
-  height: 100%;
-  object-fit: cover;
+  width: 100%;
 }
 .row {
   padding: 10px 20px 10px 20px;
