--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -36,40 +36,14 @@ data-pos="{{ forloop.index }}"
   <!--Product Link-->
   <a class="thumbnail" href="{{ product.url }}">
     <span class="box"></span>
-      {% unless product.metafields.custom.notice == blank %}
+    {% unless product.metafields.custom.notice == blank %}
           <div class="newin" style="z-index:100; text-transform:uppercase;">  {{ product.metafields.custom.notice }}</div>
-      {% endunless %}
-        <span class="colors" data-section="{{ section.id }}" data-url="{{ product.url }}" {{ block.shopify_attributes }}>
-          {%- for option in product.options_with_values -%}
-            {%- for value in option.values -%}
-              {%- liquid
-                assign optionNumber = 'option' | append: option.position
-                assign optionVariant = false
-                for variant in product.variants
-                  if variant[optionNumber] == value
-                    assign optionVariant = variant
-                    break
-                  endif
-                endfor
-              -%}
-
-              {% if product.variants[forloop.index0].metafields.custom.color and option.name == "Color"%}
-                  <span class="{%- if optionVariant.available == false -%} unavailable {%- endif -%}" style="background-color: {{ product.variants[forloop.index0].metafields.custom.color }}">
-                    &nbsp;</span>
-              {% endif %}
-            {%- endfor -%}
-          {%- endfor -%}
-          <script type="application/json">
-            {{ product.variants | json }}
-          </script>
-         </span>
-
+    {% endunless %}
     {% for c in product.collections %}
       {% if c.handle == "new" %}
         <div class="newin">NEW IN</div>
       {% endif %}
     {% endfor %}
-
     <form id="product-actions" action="/cart/add" method="post" enctype="multipart/form-data"
                       {%- if product.has_only_default_variant -%}
                       class="product-simple"
@@ -90,8 +64,7 @@ data-pos="{{ forloop.index }}"
 
 
 
-        </form>
-
+    </form>
     {% for media in product.media %}
         {% case media.media_type %}
               {% when 'video' %}
@@ -101,9 +74,8 @@ data-pos="{{ forloop.index }}"
         {% endcase %}
     {% endfor %}
     <img class="lazy" src="{{ product.images[0] | product_img_url: 'thumb' }}" data-src="{{ product.images[0] | product_img_url: 'master' }}" alt="{{ product.title }}" />
-
   </a>
-   	<div class="product-price-wrap">
+  <div class="product-price-wrap">
         {% if product.available %}
               {% if product.price_varies %}
                 {% else %}
@@ -121,11 +93,8 @@ data-pos="{{ forloop.index }}"
         {% if difference < 5 %}
 
         {% endif %}
-    </div>
-
-
+  </div>
   <div class="row">
-  <!--Product Title-->
     <div class="main-information">
       <div class="product-title">
       <a href="{{ product.url }}">{{ product.title}}</a>
@@ -168,10 +137,8 @@ data-pos="{{ forloop.index }}"
             {% endunless %}
           {% endfor %}
         {% endfor %}
-      </div>
+      </div></div>
   </div>
-
-    </div>
 </div>
   {%- if template contains 'product' or template contains 'collection' -%}
   {{ 'global-product.js' | asset_url | script_tag }}
@@ -180,7 +147,6 @@ data-pos="{{ forloop.index }}"
 	{% render 'ajaxify-cart' %}
 {%- endif -%}{% render 'mws_apo_init' %}
 <script>
-
   //Produt functions
   var selectCallback = function(variant, selector){
     if(variant){
