--- a/assets/style.css
+++ b/assets/style.css
@@ -325,6 +325,7 @@ z-index:101;
   grid-template-columns: repeat(12,1fr);
 }
 #products{
+  padding: 20px;
   grid-gap:12px;
   flex-grow: 1;
   display: grid;
