--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,7 @@ select{
   -moz-border-radius: 0;
   border-radius: 0;
   border: 0;
-  font-size:12px!important;
+  font-size:10px!important;
   color: inherit;
   background: transparent;
   background-color: transparent;
@@ -158,6 +158,15 @@ select:disabled{
 .active{
   color:grey;
 }
+.thumbnail{
+  position: relative;
+}
+span.box {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    border: 1px solid grey;
+}
 body{
  font-size: 14px;
  font-family: 'ABCArizonaSans-Bold';
@@ -191,18 +200,6 @@ a{
   text-decoration: none;
   cursor: pointer;
 }
-.cs{
-  left:0;
-  top:0;
-  width:100vw;
-  height:100vh;
-  position:fixed;
-}
-.cs img{
- object-fit:cover;
- width:100%;
- height:100%;
-}
 .logo{
   top:55px;
   left: 50%;
@@ -220,44 +217,6 @@ a{
   width: 12vw;
   padding:15px;
 }
-.stack{
-  position: fixed!important;
-  top:50px!important;
-  width: 15vw!important;
-  }
-.logo_big{
-  z-index: 90;
-  top: 0px;
-  position: absolute;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.logo_big svg{
-  fill:#5FB307!important;
-  width: 30vw;
-  padding:15px;
-}
-.logo_big svg.smaller{
-  transition:1s ease;
-  width: 12vw;
-  position:sticky;
-  top:50px;
-}
-.logo_big svg.bigger{
-  transition:1s ease;
-  width: 30vw;
-}
-.coming{
-  position:fixed;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  bottom:50px;
-  font-size:25px;
-  color:white;
-}
 /* MAIN
 ================================================== */
 header {
@@ -274,23 +233,6 @@ footer{
   position: fixed;
   bottom: 40px;
 }
-.message {
-  font: 20px Helvetica, Arial, Sans-serif;
-  display: none;
-  width: 100%;
-  padding: 20px;
-  color: #fff;
-}
-.down{
-  width: fit-content;
-  cursor:pointer;
-}
-.error {
-    background: red;
-}
-.success {
-    background: green;
-}
 .menu{
   align-items: center;
   padding:15px 20px 15px 20px;
@@ -300,22 +242,6 @@ footer{
   position: sticky;
   top: 0px;
   z-index:100;
-}
-.open{
-  display:block!important;
-}
-.menu a{
-  margin-right:20px;
-}
-.cart-part{
-position: fixed;
-right: 0px;
-top: 15px;
-display: flex;
-z-index:101;
-}
-.cart-part a{
-  margin-right:20px;
 }
 /* SHOP
 ================================================== */
