--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -1,5 +1,5 @@
 <!--Product-->
-<div id="product" class="product">
+<div class="product">
     <a class="thumbnail" href="{{ product.url }}">
     <span class="box"></span>
     {% unless product.metafields.custom.notice == blank %}
