--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -87,6 +87,7 @@
         </div>
     </div>
 </div>
+</div>
 {%- if template contains 'product' or template contains 'collection' -%}
   {{ 'global-product.js' | asset_url | script_tag }}
 {%- endif -%}
