--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -62,6 +62,12 @@
         </div>
         <div class="row">
           <div class="main-information">
+            <div class="product-designer">
+                <a>designer</a>
+            </div>
+            <div class="product-era">
+                <a>1980</a>
+            </div>
             <div class="product-title">
                 <a href="{{ product.url }}">{{ product.title}}</a>
             </div>
