--- a/assets/style.css
+++ b/assets/style.css
@@ -272,6 +272,11 @@ img{
   display: grid;
   grid-column:span 4;
 }
+.product-info {
+    grid-template-columns: repeat(4,1fr);
+    display: grid;
+    grid-gap:12px;
+}
 .thumbnail{
   height:auto;
 }
