--- a/assets/style.css
+++ b/assets/style.css
@@ -272,7 +272,7 @@ img{
   display: grid;
   grid-column:span 4;
 }
-.product-info {
+.product-info .row {
     grid-template-columns: repeat(4,1fr);
     display: grid;
     grid-gap:12px;
