--- a/assets/style.css
+++ b/assets/style.css
@@ -277,10 +277,10 @@ img{
     display: grid;
     grid-gap:12px;
 }
-.product-info>div:odd {
+.main-information>div:odd {
     grid-template-columns: repeat(1,1fr);
 }
-.product-info>div:even {
+.main-information>div:even {
     grid-template-columns: repeat(2,1fr);
 }
 .thumbnail{
