--- a/assets/style.css
+++ b/assets/style.css
@@ -277,10 +277,10 @@ img{
     display: grid;
     grid-gap:12px;
 }
-.main-information>div:odd {
+.main-information:nth-child(odd) {
     grid-template-columns: repeat(1,1fr);
 }
-.main-information>div:even {
+.main-information:nth-child(even) {
     grid-template-columns: repeat(2,1fr);
 }
 .thumbnail{
