--- a/snippets/product-body.liquid
+++ b/snippets/product-body.liquid
@@ -62,19 +62,19 @@
         </div>
         <div class="row">
           <div class="main-information">
-            <div>designer</div>
+            <div>Designer</div>
             <div class="product-designer">
-                <a>designer</a>
+                <a>Alexander Wang</a>
             </div>
-            <div>era</div>
+            <div>Era</div>
             <div class="product-era">
                 <a>1980</a>
             </div>
-            <div>title</div>
+            <div>Item</div>
             <div class="product-title">
                 <a href="{{ product.url }}">{{ product.title}}</a>
             </div>
-            <div>price</div>
+            <div>Price</div>
             <div class="product-price">
              {% if product.available %}
               {% if product.price_varies %}
