--- a/assets/style.css
+++ b/assets/style.css
@@ -278,10 +278,10 @@ img{
     grid-gap:12px;
 }
 .main-information:nth-child(odd) {
-    grid-template-columns: repeat(1,1fr);
+    grid-column: span 1;
 }
 .main-information:nth-child(even) {
-    grid-template-columns: repeat(2,1fr);
+    grid-column: span 3;
 }
 .thumbnail{
   height:auto;
