--- a/assets/style.css
+++ b/assets/style.css
@@ -280,10 +280,12 @@ img{
 }
 .main-information>div:nth-child(odd) {
     grid-column: span 1;
+    padding-left: 5px;
     display: grid;
 }
 .main-information>div:nth-child(even) {
     grid-column: span 3;
+    padding-left: 5px;
     display: grid;
 }
 .thumbnail{
