--- a/assets/style.css
+++ b/assets/style.css
@@ -273,20 +273,20 @@ img{
   grid-column:span 4;
 }
 .main-information {
-    row-gap:0px;
-    grid-template-columns: repeat(4,1fr);
-    display: grid;
-    grid-gap:12px;
+  row-gap:0px!importan;
+  grid-template-columns: repeat(4,1fr);
+  display: grid;
+  grid-gap:12px;
 }
 .main-information>div:nth-child(odd) {
-    grid-column: span 1;
-    padding-left: 5px;
-    display: grid;
+  grid-column: span 1;
+  padding-left: 5px;
+  display: grid;
 }
 .main-information>div:nth-child(even) {
-    grid-column: span 3;
-    padding-left: 5px;
-    display: grid;
+  grid-column: span 3;
+  padding-left: 5px;
+  display: grid;
 }
 .thumbnail{
   height:auto;
@@ -339,11 +339,6 @@ img{
 .product-title {
   float: left;
   text-transform: uppercase;
-}
-.product-price,
-.product-sizes {
-  float: right;
-  text-align: right!important;
 }
 .product-sizes {
   display: none;
