--- a/assets/style.css
+++ b/assets/style.css
@@ -290,11 +290,13 @@ img{
   grid-gap:12px;
 }
 .info-product>div:nth-child(odd) {
+  padding: 3px;
   grid-column: span 1;
   padding-left: 5px;
   display: grid;
 }
 .info-product>div:nth-child(even) {
+  padding: 3px;
   border-left: 0.5px solid;
   grid-column: span 3;
   padding-left: 5px;
