--- a/assets/style.css
+++ b/assets/style.css
@@ -171,6 +171,7 @@ body{
  font-size: 10px;
  font-family: 'ABCArizonaSans-Bold';
  display: flex;
+ background-color: #f1f2f2;
  flex-direction: column;
  min-height: 100vh;
  width: 100%;
