--- a/assets/style.css
+++ b/assets/style.css
@@ -291,7 +291,7 @@ img{
   grid-gap:12px;
 }
 .info-product>div:nth-child(odd) {
-  padding: 2spx;
+  padding: 2px;
   grid-column: span 1;
   padding-left: 5px;
   display: grid;
