--- a/assets/style.css
+++ b/assets/style.css
@@ -161,12 +161,6 @@ select:disabled{
 .thumbnail{
   position: relative;
 }
-span.box {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    border: 1px solid grey;
-}
 body{
  font-size: 10px;
  font-family: 'ABCArizonaSans-Bold';
@@ -265,6 +259,11 @@ footer{
 img{
   width:100%;
 }
+
+
+
+
+
 .product{
   height: fit-content;
   position:relative;
@@ -273,10 +272,24 @@ img{
   display: grid;
   grid-column:span 4;
 }
-.main-information {
+.product:hover .main-information {
   border-top: 0.5px solid;
   border-right: 0.5px solid;
   border-left: 0.5px solid;
+}
+.product:hover .info-product {
+  border-bottom: 0.5px solid;
+}
+.product:hover >div:nth-child(even) {
+  border-left: 0.5px solid;
+}
+.product:hover span.box {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  border: 1px solid grey;
+}
+.main-information {
   row-gap:0px!important;
   grid-template-columns: repeat(1,1fr);
   display: grid;
