--- a/assets/style.css
+++ b/assets/style.css
@@ -289,6 +289,7 @@ img{
   border: 1px solid grey;
 }
 .main-information {
+  row-gap:0px!important;
   grid-template-columns: repeat(1,1fr);
   display: grid;
   grid-gap:12px;
