--- a/assets/style.css
+++ b/assets/style.css
@@ -273,22 +273,24 @@ img{
   grid-column:span 4;
 }
 .product:hover .main-information {
-  border-top: 0.5px solid;
-  border-right: 0.5px solid;
+  border-top: 0.5px solid black;
+  border-right: 0.5px solid black;
 }
 .product:hover .info-product {
-  border-bottom: 0.5px solid;
+  border-bottom: 0.5px solid black;
 }
 .product:hover >div:nth-child(even) {
-  border-left: 0.5px solid;
+  border-left: 0.5px solid black;
 }
 .product:hover span.box {
   height: 100%;
   width: 100%;
   position: absolute;
-  border: 1px solid grey;
+  border: 0.5px solid black;
 }
 .main-information {
+  border-top: 0.5px solid transparent;
+  border-right: 0.5px solid transparent;
   row-gap:0px!important;
   grid-template-columns: repeat(1,1fr);
   display: grid;
@@ -309,6 +311,7 @@ img{
   display: grid;
 }
 .info-product>div:nth-child(even) {
+  border-left: 0.5px solid transparent;
   padding: 2px;
   grid-column: span 3;
   padding-left: 5px;
