--- a/assets/style.css
+++ b/assets/style.css
@@ -275,6 +275,7 @@ img{
 .product:hover .main-information {
   border-top: 0.5px solid black;
   border-right: 0.5px solid black;
+  border-left: 0.5px solid black;
 }
 .product:hover .info-product {
   border-bottom: 0.5px solid black;
@@ -296,6 +297,7 @@ span.box {
 .main-information {
   border-top: 0.5px solid transparent;
   border-right: 0.5px solid transparent;
+  border-left: 0.5px solid transparent;
   row-gap:0px!important;
   grid-template-columns: repeat(1,1fr);
   display: grid;
