--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,8 +2,7 @@
 <!--
 
 {% echo shop.name %}
-Design by Otro bureau
-Code by Fernando Espeso
+Design and code By Fernando Espeso
 
 fernandoepeso.info
 {{ 'now' | date: "%Y" }}
